<resources>
    <string name="app_name">Note</string>
    <string name="title_notes">Notes</string>
    <string name="title_tasks">Tasks</string>
    <string name="tv_splash_notes_text">No notes</string>
    <string name="tv_splash_tasks_text">No tasks</string>
    <string name="bt_add_description" translatable="false">Add some</string>
    <string name="cd_edit_note" translatable="false">Edit note</string>
    <string name="et_note_title_hint">Title..</string>
    <string name="bt_save_text">save</string>
    <string name="et_note_description_hint">Note..</string>
    <string name="title_note">Note</string>
    <string name="more">More</string>
    <string name="content_description_more" translatable="false">menu more</string>
    <string name="snackbar_empty_description">Note is empty</string>
    <string name="snackbar_empty_description_t">Task is empty</string>
    <string name="snackbar_note_saved">Note saved</string>
    <string name="menu_sort_note_title">Sort</string>
    <string name="menu_show_date_title">Show date</string>
    <string name="radio_sort_by_color_text">By color</string>
    <string name="radio_sort_by_color_desc_text">By color desc</string>
    <string name="radio_sort_by_date_text">By create date old</string>
    <string name="radio_sort_by_date_desc_text">By create date new</string>
    <string name="radio_sort_by_edit_date_text">By edit date old</string>
    <string name="radio_sort_by_edit_date_desc_text">By edit date new</string>
    <string name="cancel_text">Cancel</string>
    <string name="submit_text">Submit</string>
    <string name="layout_menu_title" translatable="false">Layout</string>
    <string name="edited_text">edit.</string>
    <string name="sent_to_trash">Note sent to trash</string>
    <string name="menu_trash_title">Trash</string>
    <string name="empty">empty</string>
    <string name="notes_trash_title">Notes Trash</string>
    <string name="menu_restore_all_title" translatable="false">Restore all</string>
    <string name="menu_delete_all_title" translatable="false">Delete all</string>
    <string name="tv_splash_notes_trash_text">Trash is empty</string>
    <string name="snack_permanent_deleted_note">Note deleted permanently</string>
    <string name="snack_note_restored">Note restored</string>
    <string name="snack_permanent_deleted_all">All notes deleted permanently</string>
    <string name="snack_all_restored">All notes restored</string>
    <string name="yes">Yes</string>
    <string name="delete_all_note_earning_text">Do you want to empty the trash?</string>
    <string name="delete_inactive_tasks_earning_text">Do you want to delete all inactive tasks?</string>
    <string name="restore_all_note_earning_text">Do you want to restore all notes?</string>
    <string name="menu_settings_title">Settings</string>
    <string name="tv_start_page_setting_title">Start page:</string>
    <string name="bt_agree_restore_all_text">Restore</string>
    <string name="bt_agree_delete_all_text">Empty</string>
    <string name="tv_default_note_color_text">Note color by default:</string>
    <string name="settings_saved_text">Settings saved</string>
    <string name="tv_note_date_setting_title">Show notes date</string>
    <string name="title_task">Task</string>
    <string name="et_task_description_hint">Task..</string>
    <string name="tv_important_task">Important task</string>
    <string name="tv_add_notification">Add notification</string>
    <string name="date_picker_text">Select date</string>
    <string name="time_picker_text">Select time</string>
    <string name="et_task_date_hint">Today</string>
    <string name="et_task_time_hint">Time..</string>
    <string name="task_deleted">Task deleted</string>
    <string name="menu_delete_inactive">Delete all inactive</string>
    <string name="bt_delete_text">Delete</string>
    <string name="snack_inactive_task_deleted">All inactive tasks deleted</string>
    <string name="snack_wrong_notification_time">Wrong notification time</string>
    <string name="tv_default_task_color_text">Task color by default:</string>
    <string name="export">Export data</string>
    <string name="menu_import">Import data</string>
</resources>