<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_change_layout"
        android:icon="@drawable/ic_baseline_staggered_24"
        android:title="@string/layout_menu_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort_note"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/menu_sort_note_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_settings_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_trash"
        android:icon="@drawable/ic_baseline_delete_outline_24"
        android:title="@string/menu_trash_title"
        app:showAsAction="ifRoom"/>

</menu>