<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_dialog_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/menu_sort_note_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_sort_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_sort_by_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_sort_by_color_text" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_sort_by_color_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_sort_by_color_desc_text" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_sort_by_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_sort_by_date_text" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_sort_by_date_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_sort_by_date_desc_text" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_sort_by_edit_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_sort_by_edit_date_text" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_sort_by_edit_date_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_sort_by_edit_date_desc_text" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_dialog_cancel"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/cancel_text"
                    android:textColor="@color/cancel_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/light_gray" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_dialog_submit"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/submit_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>