<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/menu_settings_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_start_page_setting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/tv_start_page_setting_title"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_settings_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_settings_start_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_notes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_settings_start_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_tasks" />

        </RadioGroup>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_settings_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_save_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>