<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_dialog_warning_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_warning_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/menu_sort_note_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Do you really wan't to do that?" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_dialog_cancel"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:minWidth="100dp"
                    android:text="@string/cancel_text"
                    android:textColor="@color/light_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/light_gray" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_dialog_yes"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:minWidth="100dp"
                    android:text="@string/yes"
                    android:textColor="@color/note_red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>