<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.EditTaskFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/title_task" />

    <ScrollView
        android:id="@+id/scroll_edit_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_edit_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_edit_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_check"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_check_empty_circle_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_importance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="-6dp"
                        android:src="@drawable/ic_baseline_importance_high_24"
                        android:tint="@color/warning_red"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/img_check"
                        app:layout_constraintStart_toEndOf="@id/img_check"
                        app:layout_constraintTop_toTopOf="@id/img_check"
                        tools:ignore="RtlSymmetry"
                        tools:visibility="visible" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_task_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/et_task_description_hint"
                        android:minHeight="48dp"
                        android:paddingEnd="24dp"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_importance"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <RadioGroup
                android:id="@+id/rg_colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_color0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_red_t_color_radio"
                    android:button="@null" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_color1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_yellow_t_color_radio"
                    android:button="@null" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_color2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_green_t_color_radio"
                    android:button="@null" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_color3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_blue_t_color_radio"
                    android:button="@null" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_color4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/rounded_gray_color_radio"
                    android:button="@null" />

            </RadioGroup>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="5dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_important_task_switcher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/switch_important_task"
                        android:padding="8dp"
                        android:text="@string/tv_important_task"
                        android:textSize="16sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_important_task"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_save_bottom"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:icon="@drawable/ic_baseline_check_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>